# Cerberus1

./: .gitignore  LICENSE  README.md  local.properties  settings.gradle.kts
.github/workflows/: build.yml
app/: .gitignore  build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/yiran/cerberus/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/yiran/cerberus/: MainActivity.kt
app/src/main/java/com/yiran/cerberus/ui/home/: HomeScreen.kt  HomeViewModel.kt  SettingsScreen.kt
app/src/main/java/com/yiran/cerberus/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/yiran/cerberus/util/: OtpAlgorithm.kt  PasswordGenerator.kt  SecurityUtil.kt  TotpUtil.kt  WebDavClient.kt  WebDavConfig.kt
app/src/main/res/drawable/: cerberus_foreground.xml
app/src/main/res/mipmap-anydpi-v26/: cerberus_round.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/xml/: data_extraction_rules.xml
app/src/test/java/com/yiran/cerberus/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
